Addes a handful of GET routes (landing page, all classes, one class, one class to edit, sign up, sign in).  Created a basic html view page for each GET route to hit with a single header to describe the purpose of the page.

--- a/src/server/views/classes/editclass.html
+++ b/src/server/views/classes/editclass.html
@@ -5,9 +5,7 @@
 {% block content %}
 
   <div class="container">
-    <h1>LANDING PAGE FOR THE ENTIRE WEBSITE--HOME PAGE!!!!</h1>
-    <p>{{title}}</p>
-    <p>The sum is {{sum}}</p>
+    <h1>ALLOWS ADMIN TO EDIT THE INFORMATION ABOUT A CLASS </h1>
   </div>
 
 {% endblock %}
