--- a/src/server/views/classes/class.html
+++ b/src/server/views/classes/class.html
@@ -5,9 +5,7 @@
 {% block content %}
 
   <div class="container">
-    <h1>LANDING PAGE FOR THE ENTIRE WEBSITE--HOME PAGE!!!!</h1>
-    <p>{{title}}</p>
-    <p>The sum is {{sum}}</p>
+    <h1>SHOWS ONE CLASS and the information that goes with it!!!</h1>
   </div>
 
 {% endblock %}
