--- a/src/server/views/classes/classes.html
+++ b/src/server/views/classes/classes.html
@@ -5,9 +5,8 @@
 {% block content %}
 
   <div class="container">
-    <h1>LANDING PAGE FOR THE ENTIRE WEBSITE--HOME PAGE!!!!</h1>
-    <p>{{title}}</p>
-    <p>The sum is {{sum}}</p>
+    <h1>Classes Landing Page: SHOWS ALL CLASSES!!</h1>
+    <h2>{{classes}}
   </div>
 
 {% endblock %}
