--- a/src/server/views/validation/signin.html
+++ b/src/server/views/validation/signin.html
@@ -5,9 +5,7 @@
 {% block content %}
 
   <div class="container">
-    <h1>LANDING PAGE FOR THE ENTIRE WEBSITE--HOME PAGE!!!!</h1>
-    <p>{{title}}</p>
-    <p>The sum is {{sum}}</p>
+    <h1>Allows a user to sign in with the studio</h1>
   </div>
 
 {% endblock %}
