--- a/src/server/views/instructors.html
+++ b/src/server/views/instructors.html
@@ -5,7 +5,7 @@
 {% block content %}
 
   <div class="container">
-    <h1>Landing Page</h1>
+    <h1>Instructors Bio</h1>
   </div>
 
 {% endblock %}
