--- a/src/server/views/classes/classes.html
+++ b/src/server/views/classes/classes.html
@@ -5,8 +5,8 @@
 {% block content %}
 
   <div class="container">
-    <h1>Classes Landing Page: SHOWS ALL CLASSES!!</h1>
-    <h2>{{classes}}
+    <h1>class Landing Page: SHOWS ALL class!!</h1>
+    <h2>{{class}}
   </div>
 
 {% endblock %}
