--- a/src/server/views/validation/signin.html
+++ b/src/server/views/validation/signin.html
@@ -4,8 +4,21 @@
 
 {% block content %}
 
-  <div class="container">
-    <h1>Allows a user to sign in with the studio</h1>
-  </div>
+<div>
+<form class="form-horizontal">
+    <div class="form-group">
+      <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+      <div class="col-lg-10">
+        <input type="text" class="form-control" id="email" placeholder="Email">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password" class="col-lg-2 control-label">Password</label>
+      <div class="col-lg-10">
+        <input type="text" class="form-control" id="password">
+      </div>
+    </div>
+  </form>
+</div>
 
 {% endblock %}
