--- a/src/server/views/classes/class.html
+++ b/src/server/views/classes/class.html
@@ -5,7 +5,37 @@
 {% block content %}
 
   <div class="container">
-    <h1>SHOWS ONE CLASS and the information that goes with it!!!</h1>
+  
+    {% for class in classes %}
+    <div class="row">
+      <div class="col-md-5">
+        <h1>{{class.name}}</h1><br>
+        <p>Instructor: {{class.names}}</p>
+        <p>Day: {{class.day}}</p>
+        <p>Start Time: {{class.start_time}}</p>
+        <p>End Time: {{class.end_time}}</p>
+        <p>Available Spots: {{class.size}}</p>
+      </div>
+      <div class="col-md-7">
+          <br><br>
+          <p>{{class.description}}</p>
+      </div>
+    </div>
+    <br><br>
+    <div class="row">
+      <div class="col-md-5">
+        <h3>Enrollment</h3>
+      </div>
+      <div class="col-md-7">
+        <br><br>
+        <a href="/classes/{{class.id}}/class/edit"><button type="button" class="btn btn-primary edit_class"  name="{{class.id}}">Edit Class</button></a>
+        <a href="/classes/{{class.id}}/class"><button type="button" class="btn btn-danger delete_class" name="{{class.id}}" data-id={{class.id}}>Delete Class</button></a>
+      </div>
+    </div>
+    {% endfor %}
   </div>
 
 {% endblock %}
+
+<button onclick="window.location.href='/page2'">Continue</button>
+<a href="/link/to/page2">Continue</a>
