--- a/src/server/views/classes/class.html
+++ b/src/server/views/classes/class.html
@@ -5,37 +5,64 @@
 {% block content %}
 
   <div class="container">
-  
-    {% for class in classes %}
+
     <div class="row">
       <div class="col-md-5">
-        <h1>{{class.name}}</h1><br>
-        <p>Instructor: {{class.names}}</p>
-        <p>Day: {{class.day}}</p>
-        <p>Start Time: {{class.start_time}}</p>
-        <p>End Time: {{class.end_time}}</p>
-        <p>Available Spots: {{class.size}}</p>
+      {% for class in classes %}
+        <h1>{{class.name}}</h1><br><br>
+        <img src="http://placehold.it/350x200">
       </div>
       <div class="col-md-7">
           <br><br>
-          <p>{{class.description}}</p>
+          <p>Instructor: {{class.names}}</p>
+          <p>Day: {{class.day}}</p>
+          <p>Start Time: {{class.start_time}}</p>
+          <p>End Time: {{class.end_time}}</p>
+          <p>Available Spots: {{class.size}}</p>
+          <p>{{class.description}}</p><br>
+          <a href="/classes/{{class.id}}/class/edit"><button type="button" class="btn btn-primary edit_class"  name="{{class.id}}">Edit Class</button></a>
+          <a href="/classes/{{class.id}}/class"><button type="button" class="btn btn-danger delete_class" name="{{class.id}}" data-id={{class.id}}>Delete Class</button></a>
+          {% endfor %}
       </div>
     </div>
     <br><br>
     <div class="row">
-      <div class="col-md-5">
+      <div class="col-md-12">
         <h3>Enrollment</h3>
-      </div>
-      <div class="col-md-7">
-        <br><br>
-        <a href="/classes/{{class.id}}/class/edit"><button type="button" class="btn btn-primary edit_class"  name="{{class.id}}">Edit Class</button></a>
-        <a href="/classes/{{class.id}}/class"><button type="button" class="btn btn-danger delete_class" name="{{class.id}}" data-id={{class.id}}>Delete Class</button></a>
-      </div>
+
+        <table class="table table-hover">
+          <tr>
+            <th>Accepeted Liability</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Address</th>
+            <th>Address</th>
+            <th>City</th>
+            <th>State</th>
+            <th>Zip</th>
+            <th>Comments</th>
+            <th></th>
+            <th></th>
+          </tr>
+          {% for user in users %}
+          <tr>
+            <td>user.liability</td>
+            <td>user.first_name</td>
+            <td>user.last_name</td>
+            <td>user.email</td>
+            <td>user.address_line_1</td>
+            <td>user.address_line_2</td>
+            <td>user.city</td>
+            <td>user.state</td>
+            <td>user.zip</td>
+            <td>user.comments</td>
+            <td><a href=""><button type="button" class="btn btn-primary edit_user"  name="{{user.id}}">Edit User</button></a></td>
+            <td><a href=""><button type="button" class="btn btn-danger delete_user" name="{{user.id}}" data-id={{user.id}}>Delete User</button></a></td>
+          </tr>
+          {% endfor %}
+        </table>
     </div>
-    {% endfor %}
   </div>
 
 {% endblock %}
-
-<button onclick="window.location.href='/page2'">Continue</button>
-<a href="/link/to/page2">Continue</a>
