--- a/src/server/views/classes/classes.html
+++ b/src/server/views/classes/classes.html
@@ -5,7 +5,7 @@
 {% block content %}
 
   <div class="container">
-    <p>{{noclasses}}</p>
+    <p class="alert">{{noclasses}}</p>
     <h1>class Landing Page: SHOWS ALL class!!</h1>
     <h2>{{class}}
   </div>
