this commit is for new user functionality

--- a/src/server/views/users.html
+++ b/src/server/views/users.html
@@ -5,7 +5,7 @@
 {% block content %}
 
   <div class="container">
-    <h1>New User Sing Up Page</h1>
+    <h1>User Class/Schedule Review</h1>
   </div>
 
 {% endblock %}
