--- a/src/server/views/users_edit_profile.html
+++ b/src/server/views/users_edit_profile.html
@@ -63,12 +63,9 @@
       <label for="inputPassword" class="col-lg-2 control-label">Password</label>
       <div class="col-lg-10">
         <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-        <div class="checkbox">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <input type="checkbox"> Accept Terms and Conditions
-          </label>
-        </div>
       </div>
+    </div>
+    <div class="form-group">
       <input type="button"  id="saveUserButton" method="post" activity="/users/edit_user" value="Save">
       <input type="button" value="Cancel" method="get" activity="/">
     </div>
