--- a/src/server/views/user_profile.html
+++ b/src/server/views/user_profile.html
@@ -8,64 +8,64 @@
     <div class="form-group">
       <label for="inputEmail" class="col-lg-2 control-label">Email</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="email" placeholder="Email">{{ renderObject.email }}
+        <p id="email" placeholder="Email">{{ renderObject.email }}
       </div>
     </div>
     <div class="form-group">
       <label for="first_name" class="col-lg-2 control-label">First Name</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="firstName">{{ renderObject.first_name }}
+        <p id="firstName">{{ renderObject.first_name }}
       </div>
     </div>
     <div class="form-group">
       <label for="last_name" class="col-lg-2 control-label">Last Name</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="lastName">{{ renderObject.last_name }}
+        <p id="lastName">{{ renderObject.last_name }}
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_1" class="col-lg-2 control-label">Street Address 1</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="line_1">{{ renderObject.address_line_1 }}
+        <p id="line_1">{{ renderObject.address_line_1 }}
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_2" class="col-lg-2 control-label">Street Address 2</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="line 2">{{ renderObject.address_line_2 }}
+        <p id="line 2">{{ renderObject.address_line_2 }}
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_1" class="col-lg-2 control-label">City</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="city">{{ renderObject.city }}
+        <p id="city">{{ renderObject.city }}
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_1" class="col-lg-2 control-label">State</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="state">{{ renderObject.state}}
+        <p id="state">{{ renderObject.state}}
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_1" class="col-lg-2 control-label">Zip</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="zip">{{ renderObject.zip }}
+        <p id="zip">{{ renderObject.zip }}
       </div>
     </div>
     <div class="form-group">
       <label for="comments" class="col-lg-2 control-label">What should we know about you?</label>
       <div class="col-lg-10">
-        <input type="textarea" class="form-control" id="comments">{{ renderObject.comments}}
+        <p id="comments">{{ renderObject.comments}}
       </div>
     </div>
     <div class="form-group">
-      <label for="inputPassword" class="col-lg-2 control-label">Password</label>
+      <label for="Password" class="col-lg-2 control-label">Password</label>
       <div class="col-lg-10">
-        <input type="password" class="form-control" id="inputPassword" placeholder="Password">{{ renderObject.password}}
+        <p id="Password" placeholder="Password">{{ renderObject.password}}
       </div>
     </div>
-    <input type="hidden" id="#user_id">{{ renderObject.id }}
+    <input id="#user_id">{{ renderObject.id }}
     <div class="form-group">
       <input type="button"  id="saveUserButton" method="post" activity="/users/edit_user" value="Save">
       <input type="button" value="Cancel" method="get" activity="/">
