--- a/src/server/views/validation/signin.html
+++ b/src/server/views/validation/signin.html
@@ -1,4 +1,4 @@
-{% extends "_base.html" %}
+{% extends "../_base.html" %}
 
 {% block title %}{% endblock %}
 
@@ -9,15 +9,20 @@
     <div class="form-group">
       <label for="inputEmail" class="col-lg-2 control-label">Email</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="email" placeholder="Email">
+        <input type="text" class="form-control" id="sign_in_email">
       </div>
     </div>
     <div class="form-group">
       <label for="password" class="col-lg-2 control-label">Password</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="password">
+        <input type="password" class="form-control" id="sign_in_password">
       </div>
     </div>
+    <div class="form-group">
+      <input type="button"  id="signInButton" method="GET" activity="/users/verify" value="Sign In">
+      <input type="button" value="Cancel" method="GET" activity="/">
+      <div class="response_message">
+      </div>
   </form>
 </div>
 
