--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -7,7 +7,9 @@
   <div class="container">
     <h1>LANDING PAGE FOR THE ENTIRE WEBSITE--HOME PAGE!!!!</h1>
     <p>{{title}}</p>
-    <p>The sum is {{sum}}</p>
+    <div class="row">
+      <div class="col-md-12 landing"></div>
+    </div>
   </div>
 
 {% endblock %}
