--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -4,11 +4,10 @@
 
 {% block content %}
 
-  <div class="container">
-    <h1>LANDING PAGE FOR THE ENTIRE WEBSITE--HOME PAGE!!!!</h1>
-    <p>{{title}}</p>
-    <div class="row">
-      <div class="col-md-12 landing"></div>
+  <div class="bannerWrapper" >
+    <!-- <img src="images/Banner02.jpg" class="landingImage"> -->
+    <div class="bannerText">
+      <h1>Tai Chi Studio Zero</h1>
     </div>
   </div>
 
