--- a/src/server/views/validation/signin.html
+++ b/src/server/views/validation/signin.html
@@ -5,24 +5,22 @@
 {% block content %}
 
 <div>
-<form class="form-horizontal">
+<form class="form-horizontal" method="POST" action="/users/signin">
     <div class="form-group">
       <label for="inputEmail" class="col-lg-2 control-label">Email</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="sign_in_email">
+        <input type="text" class="form-control" id="sign_in_email" name="email">
       </div>
     </div>
     <div class="form-group">
       <label for="password" class="col-lg-2 control-label">Password</label>
       <div class="col-lg-10">
-        <input type="password" class="form-control" id="sign_in_password">
+        <input type="password" class="form-control" id="sign_in_password" name="password">
       </div>
     </div>
     <div class="form-group">
-      <input type="button"  id="signInButton" method="GET" activity="/users/verify" value="Sign In">
-      <input type="button" value="Cancel" method="GET" activity="/">
-      <div class="response_message">
-      </div>
+      <button type="submit"  id="signInButton" class="btn btn-default">Submit</button>
+    </div>
   </form>
 </div>
 
