added fortune cookie api on page load

--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -4,6 +4,13 @@
 
 {% block content %}
 
+  <!-- don't delete below this- it needs to be added to the landing page!! -->
+  <div class="hidden">
+    <p id="fortune"></p>
+  </div>
+  <!-- //don't delete above this!!// -->
+
+  
   <div class="container">
     <h1>LANDING PAGE FOR THE ENTIRE WEBSITE--HOME PAGE!!!!</h1>
     <p>{{title}}</p>
