--- a/src/server/views/_base.html
+++ b/src/server/views/_base.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="/js/users.js"></script>
     <script type="text/javascript" src="/js/edit_user.js"></script>
     <script type="text/javascript" src="/js/review.js"></script>
+    <script type="text/javascript" src="/js/fortuneCookie.js"></script>
     {% block scripts %}{% endblock %}
   </body>
 </html>
