--- a/src/server/views/classes/class.html
+++ b/src/server/views/classes/class.html
@@ -43,7 +43,6 @@
             <th>Zip</th>
             <th>Comments</th>
             <th></th>
-            <th></th>
           </tr>
           {% for user in users %}
           <tr>
@@ -57,8 +56,7 @@
             <td>{{user.state}}</td>
             <td>{{user.zip}}</td>
             <td>{{user.comments}}</td>
-            <td><a href=""><button type="button" class="btn btn-primary edit_user"  name="{{user.id}}">Edit User</button></a></td>
-            <td><a href=""><button type="button" class="btn btn-danger delete_user" name="{{user.id}}" data-id={{user.id}}>Delete User</button></a></td>
+            <td><a href=""><button type="button" class="btn btn-danger delete_user btn-sm" name="{{user.id}}" data-id={{user.id}}>Remove Student from Class</button></a></td>
           </tr>
           {% endfor %}
         </table>
