--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -5,9 +5,11 @@
 {% block content %}
 
   <div class="bannerWrapper" >
-    <!-- <img src="images/Banner02.jpg" class="landingImage"> -->
     <div class="bannerText">
       <h1>Tai Chi Studio Zero</h1>
+      <br>
+      <br>
+      <h4>API fortune cookie message is here.</h4>
     </div>
   </div>
 
