--- a/src/server/views/validation/signin.html
+++ b/src/server/views/validation/signin.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div>
+<div class="container">
 <form class="form-horizontal" method="POST" action="/users/signin">
     <div class="form-group">
       <label for="inputEmail" class="col-lg-2 control-label">Email</label>
