--- a/src/server/views/validation/signup.html
+++ b/src/server/views/validation/signup.html
@@ -3,7 +3,7 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-<div>
+<div class="container">
 <form class="form-horizontal">
     <div class="form-group">
       <label for="inputEmail" class="col-lg-2 control-label">Email</label>
