--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -13,18 +13,74 @@ a {
   font-weight: bold;
 }
 
-/* nav bar */
-.navbar {
-  display: flex;
-  align-items: center;
-  padding-left: 4rem;
-  background-color: rgba(255, 255, 255, 0.5);
+/* header */
+header {
+  color: #999;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  background-color: rgba(255, 255, 255, 0.7);
+  clear: both;
 }
 
-/* index page */
+.nav {
+	clear: both;
+}
+
+.nav ul {
+	list-style: none;
+	position: relative;
+	float: left;
+	padding: 1rem 4rem;
+}
+
+.nav .right {
+  float: right;
+}
+
+.nav ul a {
+	display: block;
+	color: #555;
+	line-height: 32px;
+	padding: 0 1rem;
+}
+
+.nav ul li {
+	position: relative;
+	float: left;
+	margin: 0;
+	padding: 0;
+}
+
+.nav ul li.current-menu-item {
+	background:#ddd;
+}
+
+.nav ul ul {
+	display: none;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	background: rgba(255, 255, 255, 0.9);;
+	padding: 0;
+}
+
+.nav ul ul li {
+	width: 200px
+}
+
+.nav ul li:hover > ul {
+	display:block
+}
+
+/* main */
 .container {
+  width: 100%;
+  min-height: 800px;
   margin: 0;
-  padding: 0;
+  padding: 60px;
+  background-color: #f2f2f2;
 }
 
 .bannerWrapper {
@@ -41,9 +97,20 @@ a {
 }
 
 .bannerText {
+  text-align: center;
   color: #333;
-  padding: 5%;
+  padding: 10% 20%;
   background: rgba(255, 255, 255, 0.5);
 }
 
 /* footer */
+footer {
+  color: #999;
+  position: fixed;
+  text-align: right;
+  padding: 1rem 4rem;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
