Added studio information and photo

--- a/src/server/views/about.html
+++ b/src/server/views/about.html
@@ -5,7 +5,10 @@
 {% block content %}
 
 <div class="container">
-  <h1>About this studio</h1>
+  <h1>About Tai Chi Studio Zero</h1>
+  <p>Tai Chi is for everyone. You can practice Tai Chi, regardless of your age, gender, or physical limitations. The unique Tai Chi training program offered at Tai Chi Studio Zero comes directly from the way it is taught by Yang style disciples in China. From our classes you will learn not only the postures, but also internal thinking techniques for body coordination, mediation, and relaxation. We use a scientific approach to precisely describe the internal thinking process for each Tai Chi movement. Our classes are designed to answer questions related to the purpose of the Tai Chi moves, the essential Tai Chi Principles, the enhancement of energy circulation throughout your body.<p>
+  <img src="../../images/tai_chi_studio.jpeg" alt="studio" height="400" width="400">
 </div>
+
 
 {% endblock %}
