not sure what happened to the header

--- a/src/server/views/classes/classes.html
+++ b/src/server/views/classes/classes.html
@@ -3,24 +3,24 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-
-<div class="row">
-  <div class="col-md-2 col-md-offset-1">
-    <h1>Mon</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-2 col-md-offset-1">
+      <h1>Mon</h1>
+    </div>
+    <div class="col-md-2">
+      <h1>Tues</h1>
+    </div>
+    <div class="col-md-2">
+      <h1>Wed</h1>
+    </div>
+    <div class="col-md-2">
+      <h1>Thurs</h1>
+    </div>
+    <div class="col-md-2">
+      <h1>Fri</h1>
+    </div>
   </div>
-  <div class="col-md-2">
-    <h1>Tues</h1>
-  </div>
-  <div class="col-md-2">
-    <h1>Wed</h1>
-  </div>
-  <div class="col-md-2">
-    <h1>Thurs</h1>
-  </div>
-  <div class="col-md-2">
-    <h1>Fri</h1>
-  </div>
-</div>
 
 
   {% for class in classes %}
@@ -28,7 +28,7 @@
   {% endfor %}
 
 
-
+</div>
 
 
 {% endblock %}
