--- a/src/server/views/instructors/instructor_edit.html
+++ b/src/server/views/instructors/instructor_edit.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container">
-  <h1>Edit instructor</h1>
+  <h2>Edit instructor:</h2>
   <form class="form-horizontal" method="POST" action="/instructors/edit/{{instructor[0].id}}">
     <div class="form-group">
       <div class="col-md-12">
