--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -1,3 +1,11 @@
+h1, h2, h3, h4, h5, p {
+  color: #666;
+}
+
+h3 {
+  font-style: italic;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -6,6 +14,11 @@ body {
 
 a {
   color: #00B7FF;
+}
+
+img {
+  max-width: 250px;
+  max-height: 250px;
 }
 
 .alert {
@@ -106,6 +119,25 @@ header {
 .bannerText p {
   font-family: 'Sarina', cursive;
   font-size: 36px;
+}
+
+/* review page */
+.review {
+  margin: 2rem;
+  padding: 1rem;
+}
+
+.wrap {
+  padding: 2rem 0;
+}
+
+.review p::first-letter {
+  font-size: 150%;
+  color: #333;
+}
+
+h3.name, h3.name a {
+  color: #669900;
 }
 
 /* footer */
