--- a/src/server/views/instructors/instructor_new.html
+++ b/src/server/views/instructors/instructor_new.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container">
-  <h1>Add New instructor</h1>
+  <h2>Add New instructor:</h2>
   <form class="form-horizontal" method="POST" action="/instructors/new">
     <div class="form-group">
       <div class="col-md-12">
