add google map but not working yet

--- a/src/server/views/contact.html
+++ b/src/server/views/contact.html
@@ -5,7 +5,29 @@
 {% block content %}
 
 <div class="container">
-  <h1>Contact info</h1>
+  <p>If you wish to contact us, please ring us at the number below. DROP-INs are welcome. Online reservations can be made by using the mindbodyconnect app.
+
+970.547.YOGA (9642)
+Meta Yoga Studios is located one block off Main Street in Breckenridge, Colorado.
+118 South Ridge Street next to Hearthstone Restaurant.
+Email:
+Jason Rodon: Owner/YTT – jason@metayoga-breck.com
+Leslie Ross: General Manager – leslie@metayoga-breck.com
+Emily Steingart: Marketing/Retail Buyer – emily@metayoga-breck.com
+Studio Hours:
+The studio will open 30 minutes prior to each scheduled class and will remain open for up to 30 minutes post. You may also purchase your pass and Meta merchandise on our Online Store.
+If you wish to leave a comment, please do so here.
+Sign up for our monthly newsletter to receive information regarding upcoming workshops and classes and specials.
+Parking is available on the street. Bike racks available. Free public transportation is also available through the Town’s transit system as well as the Summit Stage.
+Breckenridge Studio</p>
+  <h2>Our Locations:</h2>
+
+  <p>Denver, CO</p>
+  <h3>My Google Maps Demo</h3>
+    <div id="map"></div>
 </div>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFfrnIjM18PD2uN0LNqvJwiephtBUjFYw&callback=initMap">
+</script>
 
 {% endblock %}
