--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -19,6 +19,7 @@ a {
 img {
   max-width: 250px;
   max-height: 250px;
+  border: 1px solid #999;
 }
 
 .alert {
@@ -34,11 +35,8 @@ header {
   width: 100%;
   height: 50px;
   background-color: rgba(255, 255, 255, 0.7);
+  z-index: 100 !important;
   clear: both;
-}
-
-.nav {
-	clear: both;
 }
 
 .nav ul {
@@ -151,3 +149,9 @@ footer {
   height: 50px;
   background-color: rgba(255, 255, 255, 0.5);
 }
+
+#map {
+   width: 100%;
+   height: 400px;
+   background-color: grey;
+ }
