--- a/src/server/views/_base.html
+++ b/src/server/views/_base.html
@@ -36,7 +36,7 @@
       <ul class="right">
         <li><a href="/users/signup">Get One Week Free Lessons?</a></li>
         <li class="current-menu-item"><a href="/users/signin">Log In</a></li>
-        <li><a href="#">Log Out</a></li>
+        <li><a href="/users/logout" id="logout">Log Out</a></li>
       </ul>
     </nav>
   </header>
@@ -46,9 +46,9 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
-    <script type="text/javascript" src="/js/users.js"></script>
-    <script type="text/javascript" src="/js/edit_user.js"></script>
+
     <script type="text/javascript" src="/js/review.js"></script>
+    <script type="text/javascript" src="/js/user_logout.js"></script>
     <script type="text/javascript" src="/js/fortuneCookie.js"></script>
     {% block scripts %}{% endblock %}
   </body>
