--- a/src/server/views/validation/signin.html
+++ b/src/server/views/validation/signin.html
@@ -23,5 +23,6 @@
     </div>
   </form>
 </div>
-
+<script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="/js/signin.js"></script>
 {% endblock %}
