fixed google map api

--- a/src/server/views/instructors/instructor.html
+++ b/src/server/views/instructors/instructor.html
@@ -10,7 +10,7 @@
       <h2>Instructor:</h2>
       <img src="../images/{{instructor[0].photo_url}}" alt="instractor photo not available">
       <br>
-      <h3 class="name">{{instructor[0].names}}</h3>
+      <h3>{{instructor[0].names}}</h3>
       <br>
       <p>{{instructor[0].biography}}</p>
       <br>
