--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -2,7 +2,8 @@ h1, h2, h3, h4, h5, p {
   color: #666;
 }
 
-h3 {
+h3, h3 a {
+  color: #669900;
   font-style: italic;
 }
 
@@ -134,9 +135,13 @@ header {
   color: #333;
 }
 
-h3.name, h3.name a {
-  color: #669900;
-}
+/* contact us page */
+#map {
+   width: 50%;
+   height: 400px;
+   background-color: grey;
+ }
+
 
 /* footer */
 footer {
@@ -149,9 +154,3 @@ footer {
   height: 50px;
   background-color: rgba(255, 255, 255, 0.5);
 }
-
-#map {
-   width: 100%;
-   height: 400px;
-   background-color: grey;
- }
