--- a/src/server/views/_base.html
+++ b/src/server/views/_base.html
@@ -30,7 +30,7 @@
             <li><a href="#">Sub Menu 3</a></li>
           </ul> -->
         </li>
-        <li><a href="/instructors">instructors</a></li>
+        <li><a href="/instructors">Instructors</a></li>
         <li><a href="/contact">Contact Us</a></li>
       </ul>
       <ul class="right">
