css text size update

--- a/src/server/views/classes/editclass.html
+++ b/src/server/views/classes/editclass.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container edit-container">
-  <h1>Edit Class Information</h1>
+  <h2>Edit Class Information:</h2>
   <br><br>
 
   <form class="form-horizontal edit-class" method="POST"
