--- a/src/server/views/contact.html
+++ b/src/server/views/contact.html
@@ -6,14 +6,13 @@
 
 <div class="container">
   <h2>Contact Us:</h2>
-  <h4>If you wish to contact us, please ring us at the number below or email us for any questions.</h4> <h4>Walk-Ins are welcome.</h4>
+  <h4>If you wish to contact us, please ring us at the number below or email us for any questions.</h4>
+  <h4>Walk-Ins are welcome.</h4>
   <h4>Online reservations can be made by using the <b><i>Tai Chi Studio app.<i></b></h4>
-  <h3>Phone Number:</h3>
-    <h4>303.xxx.xxxx</h4>
-  <h3>Email Address:</h3>
-    <h4>Info@TaiChiStudio.com</h4>
-  <h3>Our Locations:</h3>
-    <p>Denver, CO</p>
+  <br>
+  <h4>Phone Number: <b> xxx.xxx.xxxx</b>
+  <h4>Email Address: <b> Info@TaiChiStudio.com</b>
+  <h4>Our Location: <b> Denver, CO</b>
   <div id="map"></div>
 </div>
 
