--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -1,3 +1,7 @@
+h1 {
+  font-size: 48px
+}
+
 h1, h2, h3, h4, h5, p {
   color: #666;
 }
@@ -18,8 +22,8 @@ a {
 }
 
 img {
-  max-width: 250px;
-  max-height: 250px;
+  max-width: 350px;
+  max-height: 350px;
   border: 1px solid #999;
 }
 
@@ -93,6 +97,7 @@ header {
   margin: 0;
   padding: 60px;
   background-color: #f2f2f2;
+  position: relative;
 }
 
 .bannerWrapper {
@@ -117,7 +122,7 @@ header {
 
 .bannerText p {
   font-family: 'Sarina', cursive;
-  font-size: 36px;
+  font-size: 24px;
 }
 
 /* review page */
@@ -137,11 +142,11 @@ header {
 
 /* contact us page */
 #map {
-   width: 50%;
-   height: 400px;
-   background-color: grey;
+  margin-top: 30px;
+  width: 50%;
+  height: 400px;
+  background-color: grey;
  }
-
 
 /* footer */
 footer {
@@ -153,4 +158,13 @@ footer {
   width: 100%;
   height: 50px;
   background-color: rgba(255, 255, 255, 0.5);
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    height: 200px;
+  }
+  .container {
+    margin-top: 150px;
+  }
 }
