--- a/src/server/views/_base.html
+++ b/src/server/views/_base.html
@@ -49,6 +49,13 @@
     <script type="text/javascript" src="/js/review.js"></script>
     <script type="text/javascript" src="/js/user_logout.js"></script>
     <script type="text/javascript" src="/js/fortuneCookie.js"></script>
+    <script type="text/javascript" src="/js/map.js"></script>
     {% block scripts %}{% endblock %}
   </body>
+  <footer>
+    + <a href="https://github.com/gdebell">Gina</a> |
+    + <a href="https://github.com/aliasm6">Alias</a> |
+    + <a href="https://github.com/okabe-san">Akiko</a> |
+    + <a href="https://github.com/philbenz">Phil</a>
+  </footer>
 </html>
