--- a/src/server/views/contact.html
+++ b/src/server/views/contact.html
@@ -8,16 +8,19 @@
   <div class="col-md-12">
     <h2>Contact Us</h2>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-12">
     <h4>If you wish to contact us, please ring us at the number below or email us for any questions.</h4>
     <h4>Walk-Ins are welcome.</h4>
     <h4>Online reservations can be made by using the <b><i>Tai Chi Studio app.<i></b></h4>
     <br>
-    <h4>Phone Number: <b> xxx.xxx.xxxx</b>
-    <h4>Email Address: <b> Info@TaiChiStudio.com</b>
-      <h4>Our Location: <b> Denver, CO</b>
   </div>
   <div class="col-md-6">
+    <h3>Tai Chi Studio Zero</h3>
+    <h4>Phone Number: <b> xxx.xxx.xxxx</b>
+    <h4>Email Address: <b> Info@TaiChiStudio.com</b>
+    <h4>Our Location: <b> 1062 Delaware St
+Denver, CO 80204</b>
+    <hr>
     <div id="map"></div>
   </div>
 </div>
