--- a/src/server/views/instructors/instructors.html
+++ b/src/server/views/instructors/instructors.html
@@ -7,35 +7,37 @@
   <div class="container">
     <h2>Instructors:</h2>
     {% for instructor in instructor %}
-      <h3><a href="/instructors/{{instructor.id}}">{{instructor.names}}</a></h3>
-      <p>{{instructor.biography}}</p>
-      <p>{{instructor.rating | safe}}</p>
-      <hr>
+    <div class="col-xs-12 col-md-4 window">
+        <h3><a href="/instructors/{{instructor.id}}">{{instructor.names}}</a></h3>
+        <p>{{instructor.biography}}</p>
+        <p>{{instructor.rating | safe}}</p>
+        <hr>
+    </div>
     {% endfor %}
-
-    <h1>Admin Area:</h1>
-    <h3><a href="/instructors/new" type="button" class="btn btn-primary">Add New instructor</a></h3>
-    <button class="btn btn-primary edit-instructor">Edit instructor</button>
-    Please select an instructor from a dropdow menu.
-    <br>
-    <select id="editId" class="form-control">
-    {% for instructor in instructor %}
-      <option value="{{instructor.id}}">
-      {{instructor.names}}
-      </option>
-    {% endfor %}
-    </select>
-    <br>
-    <button class="btn btn-sm btn-primary delete-instructor">Delete</button>
-    Please select an instructor from a dropdow menu.
-    <select id="deleteId" class="form-control">
-    {% for instructor in instructor %}
-      <option value="{{instructor.id}}">
-      {{instructor.names}}
-      </option>
-    {% endfor %}
-    </select>
-
+    <div class="col-xs-12 col-md-5 addmin">
+      <h1>Admin Area:</h1>
+      <h3><a href="/instructors/new" type="button" class="btn btn-primary">Add New instructor</a></h3>
+      <button class="btn btn-primary edit-instructor">Edit instructor</button>
+      Please select an instructor from a dropdow menu.
+      <br>
+      <select id="editId" class="form-control">
+      {% for instructor in instructor %}
+        <option value="{{instructor.id}}">
+        {{instructor.names}}
+        </option>
+      {% endfor %}
+      </select>
+      <br>
+      <button class="btn btn-sm btn-primary delete-instructor">Delete</button>
+      Please select an instructor from a dropdow menu.
+      <select id="deleteId" class="form-control">
+      {% for instructor in instructor %}
+        <option value="{{instructor.id}}">
+        {{instructor.names}}
+        </option>
+      {% endfor %}
+      </select>
+    </div>
   </div>
 
 {% endblock %}
