made the about us page look niceer

--- a/src/server/views/about.html
+++ b/src/server/views/about.html
@@ -5,15 +5,26 @@
 {% block content %}
 
 <div class="container">
-  <div class="col-md-12">
+
+  <div class="col-md-12 about-us">
     <h2>About Tai Chi Studio Zero</h2>
+    <br>
+    <h4>We are a diverse community that loves all things Tai Chi. We are one of the longest-running studios in Denver and offer a wide variety of classes for all levels and types of practitioners. Award winning, family-owned and operated, Tai Chi Studio Zero offers a place to take your practice to the next level. Our teachers are steeped in tradition and experience. We don’t offer anything new; we are simply the continuation of teachers and lineages of yoga that have come before us.</h4>
   </div>
-  <div class="col-md-5">
-    <img src="../../images/tai_chi_studio.jpeg" alt="studio" height="600" width="600">
+
+  <div class="row row_about">
+    <div class="col-md-4">
+      <img src="../../images/budha.jpeg" alt="studio" height="400" width="400">
+    </div>
+    <div class="col-md-4">
+      <img src="../../images/tai_chi_studio.jpeg" alt="studio" height="400" width="400">
+    </div>
+    <div class="col-md-4">
+      <img src="../../images/rocks.jpeg" alt="studio" height="400" width="400">
+    </div>
   </div>
-  <div class="col-md-7">
-    <h4>Tai Chi is for everyone. You can practice Tai Chi, regardless of your age, gender, or physical limitations. The unique Tai Chi training program offered at Tai Chi Studio Zero comes directly from the way it is taught by Yang style disciples in China. From our classes you will learn not only the postures, but also internal thinking techniques for body coordination, mediation, and relaxation. We use a scientific approach to precisely describe the internal thinking process for each Tai Chi movement. Our classes are designed to answer questions related to the purpose of the Tai Chi moves, the essential Tai Chi Principles, the enhancement of energy circulation throughout your body.</h4>
-  </div>
+
+
 </div>
 
 
