--- a/src/server/views/classes/class.html
+++ b/src/server/views/classes/class.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div class="col-md-5">
       {% for class in classes %}
-        <h2>{{class.name}}:</h2><br><br>
+        <h2>{{class.name}}</h2><br><br>
         <img src="http://placehold.it/350x200">
       </div>
       <div class="col-md-7">
