redirect works and classes page includes link (for admin) to get to the form to add a new class

--- a/src/server/views/classes/classes.html
+++ b/src/server/views/classes/classes.html
@@ -4,6 +4,9 @@
 
 {% block content %}
 <div class="container">
+  <div class="row addNewClassLink">
+    <a href="/classes/new">Add a new class</a>
+  </div>
   <div class="row">
     <div class="col-md-2 col-md-offset-1">
       <h1>Mon</h1>
