--- a/src/server/views/classes/newclass.html
+++ b/src/server/views/classes/newclass.html
@@ -33,14 +33,14 @@
             </select>
           </div>
           <div class="form-group">
-            <label for="classDay">Instructor</label>
+            <label for="classDay">Day</label>
             <select class="form-control day" id='classDay'>
               <option disabled selected=true>Select Day</option>
               <option>Monday</option>
               <option>Tuesday</option>
               <option>Wednesday</option>
               <option>Thursday</option>
-              <option>Friday</option>        
+              <option>Friday</option>
 
             </select>
           </div>
