added some style to contact about us page

--- a/src/server/views/about.html
+++ b/src/server/views/about.html
@@ -5,25 +5,25 @@
 {% block content %}
 
 <div class="container">
-
-  <div class="col-md-12 about-us">
-    <h2>About Tai Chi Studio Zero</h2>
-    <br>
-    <h4>We are a diverse community that loves all things Tai Chi. We are one of the longest-running studios in Denver and offer a wide variety of classes for all levels and types of practitioners. Award winning, family-owned and operated, Tai Chi Studio Zero offers a place to take your practice to the next level. Our teachers are steeped in tradition and experience. We don’t offer anything new; we are simply the continuation of teachers and lineages of yoga that have come before us.</h4>
-  </div>
-
-  <div class="row row_about">
-    <div class="col-md-4">
-      <img src="../../images/budha.jpeg" alt="studio" height="400" width="400">
-    </div>
-    <div class="col-md-4">
-      <img src="../../images/tai_chi_studio.jpeg" alt="studio" height="400" width="400">
-    </div>
-    <div class="col-md-4">
-      <img src="../../images/rocks.jpeg" alt="studio" height="400" width="400">
+  <div class="row">
+    <div class="col-md-12 col-xs-12 about-us ">
+      <h2>About Tai Chi Studio Zero</h2>
+      <br>
+      <h4>We are a diverse community that loves all things Tai Chi. We are one of the longest-running studios in Denver and offer a wide variety of classes for all levels and types of practitioners. Award winning, family-owned and operated, Tai Chi Studio Zero offers a place to take your practice to the next level. Our teachers are steeped in tradition and experience. We don’t offer anything new; we are simply the continuation of teachers and lineages of yoga that have come before us.</h4>
     </div>
   </div>
 
+  <div class="row col-md-12 col-xs-12 about_photo">
+    <div class="col-md-4 col-xs-12">
+      <img src="../../images/budha.jpeg" alt="studio">
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <img src="../../images/tai_chi_studio.jpeg" alt="studio">
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <img src="../../images/rocks.jpeg" alt="studio">
+    </div>
+  </div>
 
 </div>
 
