--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -180,5 +180,29 @@ footer {
 
 .about-us {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 18px;
+}
+
+@media screen and (max-width: 768px) {
+.about_photo img {
+    height: 100px;
+    width: 100px;
+  }
+}
+
+.about_photo img {
+  height: 350px;
+  width: 350px;
+}
+
+.contact-info {
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 80px;
+  border-top: 1px #666 solid;
+}
+
+.like-us {
+  margin-top: 80px;
+  margin-left: 150px;
 }
