--- a/src/server/views/instructors/instructor_edit.html
+++ b/src/server/views/instructors/instructor_edit.html
@@ -5,24 +5,23 @@
 {% block content %}
 
 <div class="container">
-  <h2>Edit instructor:</h2>
+  <h2>Edit instructor</h2>
   <form class="form-horizontal" method="POST" action="/instructors/edit/{{instructor[0].id}}">
     <div class="form-group">
-      <div class="col-md-12">
-        <h4>Name:</h4>
+      <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <h4>Name</h4>
         <input type="text" class="form-control" name="names" value="{{instructor[0].names}}">
-      </div>
-      <div class="col-md-12">
-        <h4>Biography:</h4>
+        <h4>Biography</h4>
         <input type="text" class="form-control" name="biography" value="{{instructor[0].biography}}">
-      </div>
-      <div class="col-md-12">
-        <h4>Photo URL:</h4>
+        <!-- <textarea rows="5" class="form-control" name="biography" value="{{instructor[0].biography}}">
+        </textarea> -->
+        <h4>Photo URL</h4>
         <input type="text" class="form-control" name="photo_url" value="{{instructor[0].photo_url}}">
+        <br>
+        <a href="/instructors" type="button" class="btn btn-default">Cancel</a>
+        <button type="submit" class="btn btn-default">Edit instructor</button>
       </div>
     </div>
-    <a href="/instructors" type="button" class="btn btn-default">Cancel</a>
-    <button type="submit" class="btn btn-default">Edit instructor</button>
   </form>
 </div>
 
