--- a/src/server/views/instructors/instructor_new.html
+++ b/src/server/views/instructors/instructor_new.html
@@ -5,24 +5,22 @@
 {% block content %}
 
 <div class="container">
-  <h2>Add New instructor:</h2>
+  <h2>Add New instructor</h2>
   <form class="form-horizontal" method="POST" action="/instructors/new">
     <div class="form-group">
-      <div class="col-md-12">
-        <h4>Name:</h4>
+      <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <h4>Name</h4>
         <input type="text" class="form-control" name="names">
-      </div>
-      <div class="col-md-12">
-        <h4>Biography:</h4>
-        <input type="text" class="form-control" name="biography">
-      </div>
-      <div class="col-md-12">
-        <h4>Photo URL:</h4>
+        <h4>Biography</h4>
+        <textarea class="form-control" rows="5" name="biography">
+        </textarea>
+        <h4>Photo URL</h4>
         <input type="text" class="form-control" name="photo_url">
+        <br>
+        <a href="/instructors" type="button" class="btn btn-default">Cancel</a>
+        <button type="submit" class="btn btn-default">Add New instructor</button>
       </div>
     </div>
-    <a href="/instructors" type="button" class="btn btn-default">Cancel</a>
-    <button type="submit" class="btn btn-default">Add New instructor</button>
   </form>
 </div>
 
