--- a/src/server/views/user_profile.html
+++ b/src/server/views/user_profile.html
@@ -7,19 +7,19 @@
     <div>
       <label for="inputEmail">Email</label>
       <div>
-        <p id="email" placeholder="Email">{{ renderObject.email }}
+        <p id="email" placeholder="Email">{{ renderObject.email }}</p>
       </div>
     </div>
     <div>
       <label for="first_name">First Name</label>
       <div>
-        <p id="firstName">{{ renderObject.first_name }}
+        <p id="firstName">{{ renderObject.first_name }}</p>
       </div>
     </div>
     <div>
       <label for="last_name">Last Name</label>
       <div>
-        <p id="lastName">{{ renderObject.last_name }}
+        <p id="lastName">{{ renderObject.last_name }} </p>
       </div>
     </div>
     <div>
