--- a/src/server/views/user_edit_profile.html
+++ b/src/server/views/user_edit_profile.html
@@ -8,64 +8,57 @@
     <div class="form-group">
       <label for="inputEmail" class="col-lg-2 control-label">Email</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="email" placeholder="Email">{{ renderObject.email }}
+        <input type="text" class="form-control" id="email" placeholder="Email" value="{{ renderObject.email }}">
       </div>
     </div>
     <div class="form-group">
       <label for="first_name" class="col-lg-2 control-label">First Name</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="firstName">{{ renderObject.first_name }}
+        <input type="text" class="form-control" id="firstName" value="{{ renderObject.first_name }}">
       </div>
     </div>
     <div class="form-group">
       <label for="last_name" class="col-lg-2 control-label">Last Name</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="lastName">{{ renderObject.last_name }}
+        <input type="text" class="form-control" id="lastName" value="{{ renderObject.last_name }}">
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_1" class="col-lg-2 control-label">Street Address 1</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="line_1">{{ renderObject.address_line_1 }}
+        <input type="text" class="form-control" id="line_1" value="{{ renderObject.address_line_1 }}">
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_2" class="col-lg-2 control-label">Street Address 2</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="line 2">{{ renderObject.address_line_2 }}
+        <input type="text" class="form-control" id="line 2" value="{{ renderObject.address_line_2 }}">
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_1" class="col-lg-2 control-label">City</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="city">{{ renderObject.city }}
+        <input type="text" class="form-control" id="city" value="{{ renderObject.city }}">
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_1" class="col-lg-2 control-label">State</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="state">{{ renderObject.state}}
+        <input type="text" class="form-control" id="state" value="{{ renderObject.state}}">
       </div>
     </div>
     <div class="form-group">
       <label for="address_line_1" class="col-lg-2 control-label">Zip</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="zip">{{ renderObject.zip }}
+        <input type="text" class="form-control" id="zip" value="{{ renderObject.zip }}">
       </div>
     </div>
     <div class="form-group">
       <label for="comments" class="col-lg-2 control-label">What should we know about you?</label>
       <div class="col-lg-10">
-        <input type="textarea" class="form-control" id="comments">{{ renderObject.comments}}
+        <input type="textarea" class="form-control" id="comments" value="{{ renderObject.comments}}">
       </div>
     </div>
-    <div class="form-group">
-      <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-      <div class="col-lg-10">
-        <input type="password" class="form-control" id="inputPassword" placeholder="Password">{{ renderObject.password}}
-      </div>
-    </div>
-    <input type="hidden" id="#user_id">{{ renderObject.id }}
     <div class="form-group">
       <input type="button"  id="saveUserButton" method="post" activity="/users/edit_user" value="Save">
       <input type="button" value="Cancel" method="get" activity="/">
