--- a/src/server/views/classes/class.html
+++ b/src/server/views/classes/class.html
@@ -10,7 +10,7 @@
       <div class="col-md-5">
       {% for class in classes %}
         <h2>{{class.name}}</h2><br><br>
-        <img src="http://placehold.it/350x200">
+        <img src="../../images/{{class.photo_url}}" alt="instructor photo">
       </div>
       <div class="col-md-7">
           <br><br>
