--- a/src/client/css/classes.css
+++ b/src/client/css/classes.css
@@ -1,3 +1,12 @@
 .addNewClassLink {
   text-align: center;
 }
+.timeBlock {
+  width: 100%;
+  height: 100px;
+  border-bottom: solid #bdbdbd 1px
+}
+
+.schedule {
+  position:relative;
+}
