--- a/src/server/views/_base.html
+++ b/src/server/views/_base.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/classes.css"
+    <link rel="stylesheet" href="/css/classes.css">
     {% block css %}{% endblock %}
   </head>
   <header>
