--- a/src/server/views/classes/classes.html
+++ b/src/server/views/classes/classes.html
@@ -24,13 +24,113 @@
       <h1>Fri</h1>
     </div>
   </div>
+  <div class='schedule'>
+  {% for i in range (6,11) %}
+    <div class="row">
+      <div class="timeBlock {{i}}:00am">
+        <h4>{{i}}:00 am</h4>
+      </div>
+    </div>
+  {% endfor %}
+    <div class="row">
+      <div class="timeBlock 12:00pm">
+        <h4>12:00 pm</h4>
+      </div>
+    </div>
+  {% for i in range (1,10) %}
+    <div class="row">
+      <div class="timeBlock {{i}}:00pm">
+        <h4>{{i}}:00 pm</h4>
+      </div>
+    </div>
+  {% endfor %}
+  </div>
 
 
   {% for class in classes %}
-
+    {% if class.day === "Monday" %}
+    <div class="row">
+      <div class=classBlock>
+      <h4>{{class.name}}</h4>
+        {% for instructor in instructors %}
+          {% if instructor.id === class.instructor_id%}
+        <section>Instructor: <a href="instructors/{{instructor.id}}" >{{instructor.names}}</a></section>
+          {% endif %}
+        {% endfor %}
+        <section>Start: {{class.start_time}}</section>
+        <section>End: {{class.end_time}}</section>
+      </div>
+    </div>
+    {% endif %}
   {% endfor %}
 
+  {% for class in classes %}
+    {% if class.day === "Tuesday" %}
+    <div class="row">
+      <div class=classBlock>
+      <h4>{{class.name}}</h4>
+        {% for instructor in instructors %}
+          {% if instructor.id === class.instructor_id%}
+        <section>Instructor: <a href="instructors/{{instructor.id}}" >{{instructor.names}}</a></section>
+          {% endif %}
+        {% endfor %}
+        <section>Start: {{class.start_time}}</section>
+        <section>End: {{class.end_time}}</section>
+      </div>
+    </div>
+    {% endif %}
+  {% endfor %}
 
+  {% for class in classes %}
+    {% if class.day === "Wednesday" %}
+    <div class="row">
+      <div class=classBlock>
+      <h4>{{class.name}}</h4>
+        {% for instructor in instructors %}
+          {% if instructor.id === class.instructor_id%}
+        <section>Instructor: <a href="instructors/{{instructor.id}}" >{{instructor.names}}</a></section>
+          {% endif %}
+        {% endfor %}
+        <section>Start: {{class.start_time}}</section>
+        <section>End: {{class.end_time}}</section>
+      </div>
+    </div>
+    {% endif %}
+  {% endfor %}
+
+  {% for class in classes %}
+    {% if class.day === "Thursday" %}
+    <div class="row">
+      <div class=classBlock>
+      <h4>{{class.name}}</h4>
+        {% for instructor in instructors%}
+          {% if instructor.id === class.instructor_id%}
+        <section>Instructor: <a href="instructors/{{instructor.id}}" >{{instructor.names}}</a></section>
+          {% endif %}
+        {% endfor %}
+        <section>Start: {{class.start_time}}</section>
+        <section>End: {{class.end_time}}</section>
+      </div>
+    </div>
+    {% endif %}
+  {% endfor %}
+
+  {% for class in classes %}
+    {% if class.day === "Friday" %}
+    <div class="row">
+      <div class=classBlock>
+      <h4>{{class.name}}</h4>
+        {% for instructor in instructors%}
+          {% if instructor.id === class.instructor_id%}
+        <section>Instructor: <a href="instructors/{{instructor.id}}" >{{instructor.names}}</a></section>
+          {% endif %}
+        {% endfor %}
+        <section>Start: {{class.start_time}}</section>
+        <section>End: {{class.end_time}}</section>
+      </div>
+    </div>
+    {% endif %}
+  {% endfor %}
 </div>
 
 
