modification of seed files * faker now returns each user with an ID from 1-20 on each seed run * classes_users data changed to accomodate new user ID's

--- a/src/server/views/_base.html
+++ b/src/server/views/_base.html
@@ -51,6 +51,7 @@
     <script type="text/javascript" src="/js/newclass.js"></script>
     <script type="text/javascript" src="/js/review.js"></script>
     <script type="text/javascript" src="/js/user_logout.js"></script>
+    <script type="text/javascript" src="/js/classes.js"></script>
     <script type="text/javascript" src="/js/fortuneCookie.js"></script>
     <script type="text/javascript" src="/js/map.js"></script>
     {% block scripts %}{% endblock %}
