--- a/src/server/views/classes/classes.html
+++ b/src/server/views/classes/classes.html
@@ -24,14 +24,24 @@
       <h1>Fri</h1>
     </div>
   </div>
-  <div class='schedule'>
-  {% for i in range (6,11) %}
+  <div class="schedule">
+  {% for i in range (6,10) %}
     <div class="row">
-      <div class="timeBlock {{i}}:00am">
+      <div class="timeBlock 0{{i}}:00am">
         <h4>{{i}}:00 am</h4>
       </div>
     </div>
   {% endfor %}
+    <div class="row">
+      <div class="timeBlock 10:00am">
+        <h4>10:00 am</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="timeBlock 11:00am">
+        <h4>11:00 am</h4>
+      </div>
+    </div>
     <div class="row">
       <div class="timeBlock 12:00pm">
         <h4>12:00 pm</h4>
@@ -39,7 +49,7 @@
     </div>
   {% for i in range (1,10) %}
     <div class="row">
-      <div class="timeBlock {{i}}:00pm">
+      <div class="timeBlock 0{{i}}:00pm">
         <h4>{{i}}:00 pm</h4>
       </div>
     </div>
@@ -50,7 +60,7 @@
   {% for class in classes %}
     {% if class.day === "Monday" %}
     <div class="row">
-      <div class=classBlock>
+      <div class="col-md-3 classBlock {{class.start_time}}">
       <h4>{{class.name}}</h4>
         {% for instructor in instructors %}
           {% if instructor.id === class.instructor_id%}
@@ -67,7 +77,7 @@
   {% for class in classes %}
     {% if class.day === "Tuesday" %}
     <div class="row">
-      <div class=classBlock>
+      <div class="classBlock">
       <h4>{{class.name}}</h4>
         {% for instructor in instructors %}
           {% if instructor.id === class.instructor_id%}
@@ -84,7 +94,7 @@
   {% for class in classes %}
     {% if class.day === "Wednesday" %}
     <div class="row">
-      <div class=classBlock>
+      <div class="classBlock">
       <h4>{{class.name}}</h4>
         {% for instructor in instructors %}
           {% if instructor.id === class.instructor_id%}
@@ -101,7 +111,7 @@
   {% for class in classes %}
     {% if class.day === "Thursday" %}
     <div class="row">
-      <div class=classBlock>
+      <div class="classBlock">
       <h4>{{class.name}}</h4>
         {% for instructor in instructors%}
           {% if instructor.id === class.instructor_id%}
@@ -118,7 +128,7 @@
   {% for class in classes %}
     {% if class.day === "Friday" %}
     <div class="row">
-      <div class=classBlock>
+      <div class="classBlock">
       <h4>{{class.name}}</h4>
         {% for instructor in instructors%}
           {% if instructor.id === class.instructor_id%}
